# serializer version: 1
# name: test_all_scene_entities[scene.good_morning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'scene',
    'entity_category': None,
    'entity_id': 'scene.good_morning',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Good Morning',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Good Morning',
    'platform': 'junghome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'good_morning_scene',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_scene_entities[scene.good_morning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Good Morning',
    }),
    'context': <ANY>,
    'entity_id': 'scene.good_morning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_scene_entities[scene.movie_night-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'scene',
    'entity_category': None,
    'entity_id': 'scene.movie_night',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Movie Night',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Movie Night',
    'platform': 'junghome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'movie_night_scene',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_scene_entities[scene.movie_night-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Movie Night',
    }),
    'context': <ANY>,
    'entity_id': 'scene.movie_night',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
